--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
   <title>CodeWithUs</title>
   <script src="//unpkg.com/feathers-client@^1.0.0/dist/feathers.js"></script>
   <script src="/socket.io/socket.io.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 <body>
   <div id="app"></div>
