--- a/app/login.html
+++ b/app/login.html
@@ -5,31 +5,86 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <title>CodeWithUs</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="//cdn.rawgit.com/feathersjs/feathers-chat/v0.1.0/public/base.css">
-    <link rel="stylesheet" href="//cdn.rawgit.com/feathersjs/feathers-chat/v0.1.0/public/chat.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
   </head>
   <body>
-    <main class="login container">
+    <div class="container-fluid">
+
+      <!-- Logo -->
       <div class="row">
-        <div class="col-12 col-6-tablet push-3-tablet text-center">
-          <h1 class="font-100">Welcome Back</h1>
+        <div class="col-12 text-center">
+
+          <div class="jumbotron">
+            <h1>CodeWithUs</h1>
+            <p>A real-time collaborative code editing environment.</p>
+          </div>
+
+          <h1></h1>
         </div>
       </div>
+
       <div class="row">
-        <div class="col-12 col-6-tablet push-3-tablet col-4-desktop push-4-desktop text-center">
-          <form class="form" method="post" action="/auth/local">
-            <fieldset>
-              <input class="block" type="email" name="email" placeholder="email">
-            </fieldset>
-            <fieldset>
-              <input class="block" type="password" name="password" placeholder="password">
-            </fieldset>
-            <button type="submit" class="button button-primary block login">
-              Login
-            </button>
-          </form>
+        <!-- Login -->
+        <div class="col-xs-4 col-xs-offset-2">
+
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title text-center">Login</h3>
+            </div>
+            <div class="panel-body">
+              <form class="form" method="post" action="/auth/local">
+                <fieldset>
+                  <div class="form-group">
+                    <label for="login-email">Email address</label>
+                    <input type="email" class="form-control" name="email" id="login-email" placeholder="Email">
+                  </div>
+                </fieldset>
+                <fieldset>
+                  <div class="form-group">
+                    <label for="login-password">Password</label>
+                    <input type="password" class="form-control" name="password" id="login-password" placeholder="Password">
+                  </div>
+                </fieldset>
+                <button type="submit" class="btn btn-default">
+                  Login
+                </button>
+              </form>
+            </div>
+          </div>
         </div>
+
+        <!-- Signup -->
+        <div class="col-xs-4">
+
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title text-center">Create an Account</h3>
+            </div>
+            <div class="panel-body">
+              <form class="form" method="post" action="/signup">
+                <fieldset>
+                  <div class="form-group">
+                    <label for="signup-email">Email address</label>
+                    <input id="signup-email" class="form-control" type="email" name="email" placeholder="Email">
+                  </div>
+                </fieldset>
+                <fieldset>
+                  <div class="form-group">
+                    <label for="signup-password">Password</label>
+                    <input id="signup-password" class="form-control" type="password" name="password" placeholder="password">
+                  </div>
+                </fieldset>
+                <button type="submit" class="btn btn-default">
+                  Signup
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+
       </div>
-    </main>
+    </div>
   </body>
 </html>
